bk_ida/gobmkida/c2/accuratelib
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/engine/board.c:2274:27: error: use of undeclared identifier 'dword_A7D19C'
if ( !byte_9B389F[v19] && dword_A7D19C[v19] != v9 ) 
                          ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/engine/board.c:2274:7: error: use of undeclared identifier 'byte_9B389F'
if ( !byte_9B389F[v19] && dword_A7D19C[v19] != v9 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/engine/board.c:2280:1: error: use of undeclared identifier 'dword_A7D19C'
dword_A7D19C[v19] = v9; 
^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/engine/board.c:2282:7: error: use of undeclared identifier 'byte_9B388C'
if ( !byte_9B388C[v19] && string_number[v19 + 384] != v9 ) 
      ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/engine/board.c:2348:24: error: use of undeclared identifier 'byte_9B389F'
&& ( ( unsigned __int8)byte_9B389F[v25] != color || string[string[239].neighborlist[v25 + 160]].mark != v8) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/engine/board.c:2349:24: error: use of undeclared identifier 'byte_9B388C'
&& ( ( unsigned __int8)byte_9B388C[v25] != color || string[string[239].neighborlist[v25 + 141]].mark != v8) 
                       ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/engine/board.c:2379:22: error: use of undeclared identifier 'byte_9B389F'
|| ( unsigned __int8)byte_9B389F[v27] == color && string[string[239].neighborlist[v27 + 160]].mark == v8 
                     ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/engine/board.c:2380:22: error: use of undeclared identifier 'byte_9B388C'
|| ( unsigned __int8)byte_9B388C[v27] == color && string[string[239].neighborlist[v27 + 141]].mark == v8 
                     ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/accuratelib/src/obj/1/board.o] Error 1
